--- a/OneDrive/Área de Trabalho/CHATBOTDESCOM2.0/vercel.json
+++ b/OneDrive/Área de Trabalho/CHATBOTDESCOM2.0/vercel.json
@@ -1,5 +1,7 @@
 {
-  "buildCommand": "npm run build",
+  "version": 2,
+  "buildCommand": "npm install && npm run build",
+  "installCommand": "npm install --legacy-peer-deps",
   "outputDirectory": "build",
   "framework": "create-react-app",
   "rewrites": [
