--- a/OneDrive/Área de Trabalho/CHATBOTDESCOM2.0/package.json
+++ b/OneDrive/Área de Trabalho/CHATBOTDESCOM2.0/package.json
@@ -22,11 +22,10 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "CI=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "vercel-build": "CI=false react-scripts build"
   },
   "eslintConfig": {
     "extends": [
